Remove static methods

--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "petrus",
-  "version": "1.0.1",
-  "description": "A JavaScript library that can simply [...].",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "1.0.2",
+  "description": "A JavaScript library that can simply grab magnet link from The Pirate Bay and add it to Transmission.",
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Wifsimster/petrus.git"
