--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/Wifsimster/petrus#readme",
   "dependencies": {
-    "puppeteer": "^1.19.0"
+    "jsdom": "^15.1.1"
   }
 }
