--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "petrus",
   "version": "1.1.4",
-  "description": "A JavaScript library that can simply grab magnet link from The Pirate Bay.",
+  "description": "A JavaScript library that can simply grab magnet link from The Pirate Bay (or TPB clones).",
   "main": "petrus.js",
   "repository": {
     "type": "git",
