--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
+  "type": "module",
   "name": "petrus",
   "version": "1.1.4",
   "description": "A JavaScript library that can simply grab magnet link from The Pirate Bay (or TPB clones).",
-  "main": "petrus.js",
+  "main": "src/petrus.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Wifsimster/petrus.git"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node test/search.js",
     "patch": "npm version patch && npm publish"
   },
   "author": "",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Wifsimster/petrus#readme",
   "dependencies": {
     "jsdom": "^16.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0"
   }
 }
